--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -20,7 +20,6 @@
         android:background="@color/PrimaryColor"
         android:orientation="vertical"
         android:layout_alignParentTop="true"
-
         android:layout_alignParentStart="true">
 
         <LinearLayout
@@ -38,6 +37,26 @@
                 android:layout_height="20dp"
                 android:layout_centerVertical="true"
                 android:background="@drawable/back_white"
+                android:paddingLeft="10dp"
+                android:textColor="#ffffff"
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/btn_tomap"
+            android:layout_width="40dp"
+            android:layout_height="match_parent"
+            android:layout_toRightOf="@id/btn_back"
+            android:layout_centerVertical="true"
+            android:layout_marginLeft="10dp"
+            android:gravity="center"
+            android:visibility="gone">
+
+            <Button
+                android:layout_width="25dp"
+                android:layout_height="25dp"
+                android:layout_centerVertical="true"
+                android:background="@drawable/tomap"
                 android:paddingLeft="10dp"
                 android:textColor="#ffffff"
                 android:textSize="16sp"/>
