--- a/app/src/main/res/layout/car_dispatch.xml
+++ b/app/src/main/res/layout/car_dispatch.xml
@@ -17,13 +17,14 @@
         <LinearLayout
             android:id="@+id/btn_back"
             android:layout_width="40dp"
+            android:onClick="back"
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
             android:gravity="center">
 
             <Button
+                android:onClick="back"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_centerVertical="true"
@@ -43,13 +44,14 @@
             android:textSize="@dimen/NavigationTittleSize"/>
 
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
-            android:layout_alignRight="@+id/btn_more"
+            android:layout_alignRight="@+id/btn_onmap"
             android:layout_marginRight="50dp"
+            android:gravity="center"
             android:onClick="setVoiceState">
-
             <ImageView
+                android:onClick="setVoiceState"
                 android:id="@+id/voice"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
@@ -59,23 +61,25 @@
         </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/btn_more"
+            android:id="@+id/btn_onmap"
             android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
             android:gravity="center"
-            android:onClick="setting">
+            android:onClick="openMap">
 
             <Button
+                android:onClick="openMap"
+                android:id="@+id/button"
                 android:layout_width="25dp"
                 android:layout_height="25dp"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:background="@drawable/tomap"
                 android:gravity="center"
                 android:textColor="#ffffff"
-                android:textSize="16sp"/>
+                android:textSize="16sp" />
         </LinearLayout>
 
     </RelativeLayout>
