--- a/app/src/main/res/layout/item_mine_publish.xml
+++ b/app/src/main/res/layout/item_mine_publish.xml
@@ -2,9 +2,9 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-
                 android:background="@drawable/select_btn"
-                android:layout_marginTop="10dp">
+                android:layout_marginTop="10dp"
+    >
 
     <com.example.tr.tourhear.view.CircleImageView
         android:id="@+id/image"
@@ -13,8 +13,19 @@
         android:layout_marginBottom="5dp"
         android:layout_marginTop="5dp"
         android:layout_marginLeft="5dp"
+        android:visibility="gone"
         android:src="@drawable/timg"/>
 
+
+
+    <ImageView
+        android:id="@+id/picture"
+        android:layout_width="match_parent"
+        android:layout_height="200dp"
+        android:layout_below="@id/image"
+        android:layout_marginTop="0dp"
+        android:layout_marginBottom="5dp"
+        android:background="@mipmap/jingdian_jiuzai1"/>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -23,6 +34,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:visibility="gone"
             android:id="@+id/name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
@@ -32,28 +44,23 @@
             android:textColor="@color/TittleColor"
             android:textSize="@dimen/TittleTextSize"
             android:textStyle="bold"/>
-
         <TextView
+            android:background="@color/white"
             android:id="@+id/time"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
+            android:paddingTop="1dp"
+            android:paddingBottom="1dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="5dp"
             android:layout_marginTop="5dp"
-            android:textColor="@color/TextColor"
             android:text="TextView"
+            android:elevation="4dp"
+            android:textColor="@color/TextColor"
             android:textSize="@dimen/TextTextSize"/>
 
     </LinearLayout>
-
-    <ImageView
-        android:id="@+id/picture"
-        android:layout_width="match_parent"
-        android:layout_height="200dp"
-        android:layout_below="@id/image"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="5dp"
-        android:background="@mipmap/jingdian_jiuzai1"/>
-
     <TextView
         android:id="@+id/tittle"
         android:layout_width="wrap_content"
