--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -28,11 +28,11 @@
             android:layout_height="match_parent"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="10dp"
             android:gravity="center"
-            android:onClick="setting">
+            android:onClick="back">
 
             <Button
+                android:onClick="back"
                 android:layout_width="20dp"
                 android:layout_height="20dp"
                 android:layout_centerVertical="true"
@@ -71,11 +71,12 @@
             android:textColor="#ffffff"
             android:textSize="@dimen/NavigationTittleSize" />
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="40dp"
             android:layout_height="match_parent"
             android:layout_alignRight="@+id/btn_more"
             android:layout_marginRight="50dp"
             android:onClick="setVoiceState"
+            android:gravity="center"
             >
             <ImageView
                 android:id="@+id/voice"
@@ -84,18 +85,20 @@
                 android:layout_height="20dp"
                 android:background="@drawable/voice"
                 android:layout_gravity="center"
+                android:onClick="setVoiceState"
                 />
         </LinearLayout>
         <LinearLayout
-            android:layout_width="40dp"
+            android:layout_width="50dp"
             android:layout_height="match_parent"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:id="@+id/btn_more"
             android:onClick="setting"
             android:gravity="center"
-            android:layout_marginRight="10dp"            >
+            >
             <Button
+                android:onClick="setting"
                 android:gravity="center"
                 android:layout_gravity="center_horizontal|center_vertical"
                 android:layout_width="20dp"
