--- a/app/src/main/res/layout/page_03.xml
+++ b/app/src/main/res/layout/page_03.xml
@@ -41,7 +41,7 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:text="成都"
-            android:textColor="@color/TittleColor"
+            android:textColor="@color/white"
             android:textSize="@dimen/NavigationTittleSize"/>
 
         <ImageView
